logistic regression models

--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_1.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_1.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:50:11.111786Z",
-     "iopub.status.busy": "2024-04-29T04:50:11.111645Z",
-     "iopub.status.idle": "2024-04-29T04:50:13.005816Z",
-     "shell.execute_reply": "2024-04-29T04:50:13.005347Z"
+     "iopub.execute_input": "2024-05-02T02:12:51.577040Z",
+     "iopub.status.busy": "2024-05-02T02:12:51.576646Z",
+     "iopub.status.idle": "2024-05-02T02:12:53.849555Z",
+     "shell.execute_reply": "2024-05-02T02:12:53.849146Z"
     }
    },
    "outputs": [],
@@ -36,10 +36,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:50:13.008732Z",
-     "iopub.status.busy": "2024-04-29T04:50:13.008002Z",
-     "iopub.status.idle": "2024-04-29T04:50:14.313084Z",
-     "shell.execute_reply": "2024-04-29T04:50:14.312670Z"
+     "iopub.execute_input": "2024-05-02T02:12:53.852510Z",
+     "iopub.status.busy": "2024-05-02T02:12:53.851772Z",
+     "iopub.status.idle": "2024-05-02T02:12:56.542351Z",
+     "shell.execute_reply": "2024-05-02T02:12:56.541939Z"
     }
    },
    "outputs": [],
@@ -53,10 +53,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:50:14.316136Z",
-     "iopub.status.busy": "2024-04-29T04:50:14.315415Z",
-     "iopub.status.idle": "2024-04-29T04:50:14.614770Z",
-     "shell.execute_reply": "2024-04-29T04:50:14.614361Z"
+     "iopub.execute_input": "2024-05-02T02:12:56.545246Z",
+     "iopub.status.busy": "2024-05-02T02:12:56.544578Z",
+     "iopub.status.idle": "2024-05-02T02:12:57.096279Z",
+     "shell.execute_reply": "2024-05-02T02:12:57.095842Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:50:14.617581Z",
-     "iopub.status.busy": "2024-04-29T04:50:14.616919Z",
-     "iopub.status.idle": "2024-04-29T04:50:14.650242Z",
-     "shell.execute_reply": "2024-04-29T04:50:14.649795Z"
+     "iopub.execute_input": "2024-05-02T02:12:57.099226Z",
+     "iopub.status.busy": "2024-05-02T02:12:57.098522Z",
+     "iopub.status.idle": "2024-05-02T02:12:57.125238Z",
+     "shell.execute_reply": "2024-05-02T02:12:57.124822Z"
     }
    },
    "outputs": [
@@ -96,10 +96,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:50:14.667767Z",
-     "iopub.status.busy": "2024-04-29T04:50:14.667586Z",
-     "iopub.status.idle": "2024-04-29T04:53:51.098034Z",
-     "shell.execute_reply": "2024-04-29T04:53:51.097615Z"
+     "iopub.execute_input": "2024-05-02T02:12:57.153114Z",
+     "iopub.status.busy": "2024-05-02T02:12:57.152923Z",
+     "iopub.status.idle": "2024-05-02T02:16:14.857891Z",
+     "shell.execute_reply": "2024-05-02T02:16:14.857486Z"
     }
    },
    "outputs": [
@@ -107,19 +107,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuned hyperparameters: {'C': 0.1, 'class_weight': None, 'l1_ratio': 0.25, 'multi_class': 'multinomial', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
-      "Train accuracy of best model:  0.36138276097339095\n",
-      "Best mean CV accuracy: 0.3638938876822836\n",
-      "Coefficients: [[ 0.91692996]\n",
-      " [ 1.06147299]\n",
-      " [ 0.64615861]\n",
-      " [ 0.55746748]\n",
-      " [ 0.        ]\n",
-      " [-1.0016601 ]\n",
-      " [-1.1570297 ]\n",
-      " [ 0.        ]\n",
-      " [-0.51603245]\n",
-      " [-0.07774177]]\n"
+      "Tuned hyperparameters: {'C': 10, 'class_weight': 'balanced', 'l1_ratio': 0.0, 'multi_class': 'multinomial', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
+      "Train accuracy of best model:  0.17649738100660442\n",
+      "Best mean CV accuracy: 0.19699052298506536\n",
+      "Coefficients: [[ 1.74898141]\n",
+      " [ 1.72812777]\n",
+      " [ 1.34776221]\n",
+      " [ 1.21058686]\n",
+      " [ 0.61675659]\n",
+      " [-0.4618629 ]\n",
+      " [-1.15778807]\n",
+      " [-0.35426413]\n",
+      " [-3.7076241 ]\n",
+      " [-0.97067565]]\n",
+      "Corresponding class: [0 1 2 3 4 5 6 7 8 9]\n"
      ]
     }
    ],
@@ -133,10 +134,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:53:51.100636Z",
-     "iopub.status.busy": "2024-04-29T04:53:51.099968Z",
-     "iopub.status.idle": "2024-04-29T04:53:51.285940Z",
-     "shell.execute_reply": "2024-04-29T04:53:51.285523Z"
+     "iopub.execute_input": "2024-05-02T02:16:14.860555Z",
+     "iopub.status.busy": "2024-05-02T02:16:14.859883Z",
+     "iopub.status.idle": "2024-05-02T02:16:14.969515Z",
+     "shell.execute_reply": "2024-05-02T02:16:14.969136Z"
     }
    },
    "outputs": [
@@ -145,11 +146,11 @@
      "output_type": "stream",
      "text": [
       "X_test_scaled shape\n",
-      "(1092, 1)\n",
+      "(1118, 1)\n",
       "y_test shape\n",
-      "(1092,)\n",
-      "accuracy: 0.3498168498168498\n",
-      "share of correct predictions: 0.3498168498168498\n",
+      "(1118,)\n",
+      "accuracy: 0.19230769230769232\n",
+      "share of correct predictions: 0.19230769230769232\n",
       "assertion that they match:\n"
      ]
     }
