--- a/Code/Modelling/Logistic Regression/Rating Model - Include Previous Rating/Logistic_Regression_Include_Previous_Rating_Model_1.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Include Previous Rating/Logistic_Regression_Include_Previous_Rating_Model_1.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:05.132871Z",
-     "iopub.status.busy": "2024-04-29T04:49:05.132619Z",
-     "iopub.status.idle": "2024-04-29T04:49:07.128900Z",
-     "shell.execute_reply": "2024-04-29T04:49:07.128491Z"
+     "iopub.execute_input": "2024-05-02T02:13:10.807576Z",
+     "iopub.status.busy": "2024-05-02T02:13:10.807438Z",
+     "iopub.status.idle": "2024-05-02T02:13:12.395412Z",
+     "shell.execute_reply": "2024-05-02T02:13:12.395004Z"
     }
    },
    "outputs": [],
@@ -36,10 +36,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:07.131948Z",
-     "iopub.status.busy": "2024-04-29T04:49:07.131149Z",
-     "iopub.status.idle": "2024-04-29T04:49:09.888619Z",
-     "shell.execute_reply": "2024-04-29T04:49:09.888213Z"
+     "iopub.execute_input": "2024-05-02T02:13:12.398370Z",
+     "iopub.status.busy": "2024-05-02T02:13:12.397583Z",
+     "iopub.status.idle": "2024-05-02T02:13:13.689720Z",
+     "shell.execute_reply": "2024-05-02T02:13:13.689304Z"
     }
    },
    "outputs": [],
@@ -53,10 +53,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:09.891553Z",
-     "iopub.status.busy": "2024-04-29T04:49:09.890888Z",
-     "iopub.status.idle": "2024-04-29T04:49:10.271297Z",
-     "shell.execute_reply": "2024-04-29T04:49:10.270893Z"
+     "iopub.execute_input": "2024-05-02T02:13:13.692646Z",
+     "iopub.status.busy": "2024-05-02T02:13:13.691981Z",
+     "iopub.status.idle": "2024-05-02T02:13:13.972003Z",
+     "shell.execute_reply": "2024-05-02T02:13:13.971601Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:10.274140Z",
-     "iopub.status.busy": "2024-04-29T04:49:10.273431Z",
-     "iopub.status.idle": "2024-04-29T04:49:10.330339Z",
-     "shell.execute_reply": "2024-04-29T04:49:10.329816Z"
+     "iopub.execute_input": "2024-05-02T02:13:13.974845Z",
+     "iopub.status.busy": "2024-05-02T02:13:13.974177Z",
+     "iopub.status.idle": "2024-05-02T02:13:14.003502Z",
+     "shell.execute_reply": "2024-05-02T02:13:14.003125Z"
     }
    },
    "outputs": [
@@ -105,10 +105,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:10.342853Z",
-     "iopub.status.busy": "2024-04-29T04:49:10.342670Z",
-     "iopub.status.idle": "2024-04-29T05:01:57.535968Z",
-     "shell.execute_reply": "2024-04-29T05:01:57.535585Z"
+     "iopub.execute_input": "2024-05-02T02:13:14.034821Z",
+     "iopub.status.busy": "2024-05-02T02:13:14.034640Z",
+     "iopub.status.idle": "2024-05-02T02:20:41.175983Z",
+     "shell.execute_reply": "2024-05-02T02:20:41.175602Z"
     }
    },
    "outputs": [
@@ -116,38 +116,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuned hyperparameters: {'C': 1, 'class_weight': None, 'multi_class': 'ovr', 'penalty': None, 'solver': 'saga'}\n",
-      "Best mean CV accuracy: 0.9474606991415865\n",
-      "Coefficients: [[  0.14022966  -4.47703102  -3.19912307   2.62148599 -10.28021276\n",
-      "  -10.91854275 -11.20995798  -5.81455922  -5.78051882  -8.3669688\n",
-      "   -5.37928978]\n",
-      " [  0.09684966  -3.58515408   2.44136735  -3.34282439 -10.38082705\n",
-      "  -10.99925598  -6.86056767  -5.94056684  -5.87305112  -8.47619607\n",
-      "   -5.49344781]\n",
-      " [ -0.07985839   3.0743484   -2.04640374  -2.08569557 -10.51425584\n",
-      "  -11.05776212  -2.99058971  -6.16358261  -5.98099149  -8.63743592\n",
-      "   -5.67149511]\n",
-      " [  0.16623653  -2.75603785  -4.87141016  -8.59451281  -5.18777943\n",
-      "   -3.56935615   3.51634386  -5.91797568  -5.90015663  -8.47802334\n",
-      "   -5.48837421]\n",
-      " [ -0.02243745 -10.70199177  -9.14756767  -8.3948788   -2.63385384\n",
-      "    3.84497714  -4.18398597  -6.10302541  -5.95506739  -2.73587449\n",
-      "   -5.62419489]\n",
-      " [ -0.42416286 -10.63359196  -8.83267813  -8.21401532   3.07270754\n",
-      "   -3.97031338  -5.6644954   -6.52002052  -1.56605687  -2.58598862\n",
-      "   -5.93600729]\n",
-      " [ -0.53599917 -10.63842958  -8.79205506  -8.20443087  -5.00851322\n",
-      "   -6.06766864 -11.21137658  -6.61448658  -1.67043371   2.10791623\n",
-      "   -6.00588745]\n",
-      " [  0.50898867 -10.9349752   -9.73058209  -8.93171773  -5.66784836\n",
-      "  -10.94271335 -11.37770782  -5.49449629   1.09069006  -3.63679936\n",
-      "   -5.13520764]\n",
-      " [ -1.28551053 -10.84465762  -8.75866821  -8.35733961 -11.32550815\n",
-      "  -11.46739624 -11.37373751   6.01827547  -2.26443635  -9.48024743\n",
-      "   -6.51828985]\n",
-      " [  0.02085683 -10.59287688  -9.07304051  -8.30758234 -10.32532853\n",
-      "  -10.91255885 -11.15217771  -5.92525347  -5.80771317  -8.43384978\n",
-      "    6.58702061]]\n"
+      "Tuned hyperparameters: {'C': 0.01, 'class_weight': 'balanced', 'l1_ratio': 0.75, 'multi_class': 'multinomial', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
+      "Train accuracy of best model:  0.7271692097472102\n",
+      "Best mean CV accuracy: 0.9446562541301592\n",
+      "Coefficients: [[ 1.42475069e+00  0.00000000e+00  0.00000000e+00  2.79013540e+00\n",
+      "  -7.56397370e-03  0.00000000e+00 -1.31355557e-03  0.00000000e+00\n",
+      "   2.58928560e-01  6.52913041e-03  0.00000000e+00]\n",
+      " [ 1.33741694e+00  0.00000000e+00  2.50717582e+00  0.00000000e+00\n",
+      "  -4.22942189e-03  0.00000000e+00 -2.78749507e-04  0.00000000e+00\n",
+      "   3.10203757e-01  6.57630523e-03  0.00000000e+00]\n",
+      " [ 5.00022622e-01  2.72969459e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   2.96291839e-01  8.60309965e-03  0.00000000e+00]\n",
+      " [ 2.52672576e-01  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00  2.97321649e+00  0.00000000e+00\n",
+      "   3.03305389e-01  8.55913807e-03  0.00000000e+00]\n",
+      " [-9.26001361e-03  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  3.22879428e+00  0.00000000e+00  0.00000000e+00\n",
+      "   2.45893777e-01  7.43020366e-03  0.00000000e+00]\n",
+      " [ 2.95753073e+00  0.00000000e+00 -3.01485511e-01 -8.29996253e-02\n",
+      "   8.38412567e-01  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   1.91665130e-01  6.00185002e-03  0.00000000e+00]\n",
+      " [-3.13577469e-01  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  -1.17866995e-01  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   2.69046573e-01  3.42635151e+00  0.00000000e+00]\n",
+      " [ 2.86973902e-02  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   1.99470479e+00  2.63847472e-02  0.00000000e+00]\n",
+      " [-8.35965629e+00 -3.20212582e-01 -1.00544430e-01 -5.15108884e-01\n",
+      "   2.43821169e+00 -6.38096046e-01 -2.21253323e-01  4.29574486e+00\n",
+      "  -3.60593193e+00 -9.60650323e-01  0.00000000e+00]\n",
+      " [-1.52313162e-02  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  -1.81028501e-01  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   3.79065393e-01 -1.75521630e-01  4.39377038e+00]]\n",
+      "Corresponding class: [0 1 2 3 4 5 6 7 8 9]\n"
      ]
     }
    ],
@@ -161,10 +163,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T05:01:57.538607Z",
-     "iopub.status.busy": "2024-04-29T05:01:57.537943Z",
-     "iopub.status.idle": "2024-04-29T05:01:57.632655Z",
-     "shell.execute_reply": "2024-04-29T05:01:57.632286Z"
+     "iopub.execute_input": "2024-05-02T02:20:41.178599Z",
+     "iopub.status.busy": "2024-05-02T02:20:41.177934Z",
+     "iopub.status.idle": "2024-05-02T02:20:41.277243Z",
+     "shell.execute_reply": "2024-05-02T02:20:41.276872Z"
     }
    },
    "outputs": [
@@ -173,11 +175,11 @@
      "output_type": "stream",
      "text": [
       "X_test_scaled shape\n",
-      "(1092, 11)\n",
+      "(1118, 11)\n",
       "y_test shape\n",
-      "(1092,)\n",
-      "accuracy: 0.9496336996336996\n",
-      "share of correct predictions: 0.9496336996336996\n",
+      "(1118,)\n",
+      "accuracy: 0.7441860465116279\n",
+      "share of correct predictions: 0.7441860465116279\n",
       "assertion that they match:\n"
      ]
     }
