--- a/Output/Modelling/Logistic Regression/Tables/Most_Complex_Models_Best_Params.tex
+++ b/Output/Modelling/Logistic Regression/Tables/Most_Complex_Models_Best_Params.tex
@@ -3,7 +3,7 @@
 \toprule
 Previous Ratings & C & Class Weighting Strategy & L1 Ratio & Multi-Class Strategy & Penalty & Solver \\
 \midrule
-Exclude Previous & 1.00 & None & 0.00 & Multinomial & Elastic Net & SAGA \\
+Exclude Previous & 0.10 & Balanced & 1.00 & One vs Rest & Elastic Net & SAGA \\
 Include Previous & 0.10 & Balanced & 1.00 & One vs Rest & Elastic Net & SAGA \\
 \bottomrule
 \end{tabular}
