update company mentions excel and pyvis

--- a/Code/NLP Feature Construction/NER Firm Mentions/Getting Tickers From Firm Names.ipynb
+++ b/Code/NLP Feature Construction/NER Firm Mentions/Getting Tickers From Firm Names.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,38 +249,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>537</th>\n",
+       "      <th>538</th>\n",
        "      <td>KOS</td>\n",
        "      <td>KOS</td>\n",
        "      <td>KOSMOS ENERGY, LTD.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>538</th>\n",
+       "      <th>539</th>\n",
        "      <td>NOG</td>\n",
        "      <td>NOG</td>\n",
        "      <td>NORTHERN OIL AND GAS, INC.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>539</th>\n",
+       "      <th>540</th>\n",
        "      <td>WEN</td>\n",
        "      <td>WEN</td>\n",
        "      <td>WENDY'S INTERNATIONAL INC.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>540</th>\n",
+       "      <th>541</th>\n",
        "      <td>HOV</td>\n",
        "      <td>HOV</td>\n",
        "      <td>HOVNANIAN ENTERPRISES INC.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>541</th>\n",
+       "      <th>542</th>\n",
        "      <td>KODK</td>\n",
        "      <td>KODK</td>\n",
        "      <td>EASTMAN KODAK CO.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>542 rows × 3 columns</p>\n",
+       "<p>543 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -291,16 +291,16 @@
        "3      CAT    CAT            CATERPILLAR INC.\n",
        "4      CAT    CAT           CATERPILLAR, INC.\n",
        "..     ...    ...                         ...\n",
-       "537    KOS    KOS         KOSMOS ENERGY, LTD.\n",
-       "538    NOG    NOG  NORTHERN OIL AND GAS, INC.\n",
-       "539    WEN    WEN  WENDY'S INTERNATIONAL INC.\n",
-       "540    HOV    HOV  HOVNANIAN ENTERPRISES INC.\n",
-       "541   KODK   KODK           EASTMAN KODAK CO.\n",
+       "538    KOS    KOS         KOSMOS ENERGY, LTD.\n",
+       "539    NOG    NOG  NORTHERN OIL AND GAS, INC.\n",
+       "540    WEN    WEN  WENDY'S INTERNATIONAL INC.\n",
+       "541    HOV    HOV  HOVNANIAN ENTERPRISES INC.\n",
+       "542   KODK   KODK           EASTMAN KODAK CO.\n",
        "\n",
-       "[542 rows x 3 columns]"
+       "[543 rows x 3 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -615,6 +615,7 @@
       "ATVI ACTIVISION BLIZZARD, INC.\n",
       "AWI ARMSTRONG WORLD INDUSTRIES INC.\n",
       "AWI ARMSTRONG WORLD INDUSTRIES INC\n",
+      "BAH BOOZ ALLEN HAMILTON INC.\n",
       "BEP BROOKFIELD RENEWABLE PARTNERS L.P.\n",
       "BEP BROOKFIELD RENEWABLE PARTNERS ULC\n",
       "BG BUNGE LIMITED\n",
@@ -890,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1176,6 +1177,7 @@
       "ATVI - ACTIVISION BLIZZARD, INC. - ACTIVISION BLIZZARD\n",
       "AWI - ARMSTRONG WORLD INDUSTRIES INC. - ARMSTRONG WORLD INDUSTRIES\n",
       "AWI - ARMSTRONG WORLD INDUSTRIES INC - ARMSTRONG WORLD INDUSTRIES\n",
+      "BAH - BOOZ ALLEN HAMILTON INC. - BOOZ ALLEN HAMILTON\n",
       "BEP - BROOKFIELD RENEWABLE PARTNERS L.P. - BROOKFIELD RENEWABLE\n",
       "BEP - BROOKFIELD RENEWABLE PARTNERS ULC - BROOKFIELD RENEWABLE\n",
       "BG - BUNGE LIMITED - BUNGE\n",
@@ -1613,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1768,7 +1770,7 @@
        "[221473 rows x 4 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1795,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1855,33 +1857,33 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>537</th>\n",
+       "      <th>538</th>\n",
        "      <td>KOS</td>\n",
        "      <td>KOSMOS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>538</th>\n",
+       "      <th>539</th>\n",
        "      <td>NOG</td>\n",
        "      <td>NORTHERN OIL AND GAS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>539</th>\n",
+       "      <th>540</th>\n",
        "      <td>WEN</td>\n",
        "      <td>WENDY'S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>540</th>\n",
+       "      <th>541</th>\n",
        "      <td>HOV</td>\n",
        "      <td>HOVNANIAN ENTERPRISES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>541</th>\n",
+       "      <th>542</th>\n",
        "      <td>KODK</td>\n",
        "      <td>EASTMAN KODAK</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>542 rows × 2 columns</p>\n",
+       "<p>543 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1892,16 +1894,16 @@
        "3              CAT            CATERPILLAR\n",
        "4              CAT            CATERPILLAR\n",
        "..             ...                    ...\n",
-       "537            KOS                KOSMOS \n",
-       "538            NOG   NORTHERN OIL AND GAS\n",
-       "539            WEN                WENDY'S\n",
-       "540            HOV  HOVNANIAN ENTERPRISES\n",
-       "541           KODK          EASTMAN KODAK\n",
+       "538            KOS                KOSMOS \n",
+       "539            NOG   NORTHERN OIL AND GAS\n",
+       "540            WEN                WENDY'S\n",
+       "541            HOV  HOVNANIAN ENTERPRISES\n",
+       "542           KODK          EASTMAN KODAK\n",
        "\n",
-       "[542 rows x 2 columns]"
+       "[543 rows x 2 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1912,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1938,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1955,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
