integrate company mentions updates

--- a/Code/NLP Feature Construction/NER Firm Mentions/Getting Tickers From Firm Names.ipynb
+++ b/Code/NLP Feature Construction/NER Firm Mentions/Getting Tickers From Firm Names.ipynb
@@ -1673,38 +1673,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NEE</td>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>FPL</td>\n",
-       "      <td>26</td>\n",
+       "      <td>LPX</td>\n",
+       "      <td>2013-07-01</td>\n",
+       "      <td>OSB</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NEE</td>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>ENERGY RESOURCES</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NEE</td>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>CITC</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NEE</td>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>DESERT SUNLIGHT</td>\n",
+       "      <td>LPX</td>\n",
+       "      <td>2013-07-01</td>\n",
+       "      <td>LP</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LPX</td>\n",
+       "      <td>2013-07-01</td>\n",
+       "      <td>D.A. DAVIDSON &amp; CO.</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LPX</td>\n",
+       "      <td>2013-07-01</td>\n",
+       "      <td>THE BUCKINGHAM RESEARCH GROUP INCORPORATED</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NEE</td>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>ENERGY RESOURCES'</td>\n",
-       "      <td>9</td>\n",
+       "      <td>LPX</td>\n",
+       "      <td>2013-07-01</td>\n",
+       "      <td>ENGINEERED WOOD</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1714,60 +1714,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>221468</th>\n",
-       "      <td>KW</td>\n",
-       "      <td>2013-07-01</td>\n",
-       "      <td>KENNEDY-WILSON’S</td>\n",
+       "      <th>222279</th>\n",
+       "      <td>WTI</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>THE INTERIOR BOARD OF LAND APPEALS</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>221469</th>\n",
-       "      <td>KW</td>\n",
-       "      <td>2013-07-01</td>\n",
-       "      <td>JMP SECURITIES</td>\n",
+       "      <th>222280</th>\n",
+       "      <td>WTI</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>BSAE</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>221470</th>\n",
-       "      <td>KW</td>\n",
-       "      <td>2013-07-01</td>\n",
-       "      <td>KENNEDY WILSON’S</td>\n",
+       "      <th>222281</th>\n",
+       "      <td>WTI</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>JWEST</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>221471</th>\n",
-       "      <td>KW</td>\n",
-       "      <td>2013-07-01</td>\n",
-       "      <td>DOJ</td>\n",
+       "      <th>222282</th>\n",
+       "      <td>WTI</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>LADENBURG THALMANN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>221472</th>\n",
-       "      <td>KW</td>\n",
-       "      <td>2013-07-01</td>\n",
-       "      <td>SIDOTI</td>\n",
+       "      <th>222283</th>\n",
+       "      <td>WTI</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>MAHOGANY</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>221473 rows × 4 columns</p>\n",
+       "<p>222284 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       ticker fixed_quarter_date  company_mentioned  count\n",
-       "0         NEE         2012-01-01                FPL     26\n",
-       "1         NEE         2012-01-01   ENERGY RESOURCES     25\n",
-       "2         NEE         2012-01-01               CITC     14\n",
-       "3         NEE         2012-01-01    DESERT SUNLIGHT     10\n",
-       "4         NEE         2012-01-01  ENERGY RESOURCES'      9\n",
-       "...       ...                ...                ...    ...\n",
-       "221468     KW         2013-07-01   KENNEDY-WILSON’S      1\n",
-       "221469     KW         2013-07-01     JMP SECURITIES      1\n",
-       "221470     KW         2013-07-01   KENNEDY WILSON’S      1\n",
-       "221471     KW         2013-07-01                DOJ      1\n",
-       "221472     KW         2013-07-01             SIDOTI      1\n",
+       "       ticker fixed_quarter_date                           company_mentioned  \\\n",
+       "0         LPX         2013-07-01                                         OSB   \n",
+       "1         LPX         2013-07-01                                          LP   \n",
+       "2         LPX         2013-07-01                         D.A. DAVIDSON & CO.   \n",
+       "3         LPX         2013-07-01  THE BUCKINGHAM RESEARCH GROUP INCORPORATED   \n",
+       "4         LPX         2013-07-01                             ENGINEERED WOOD   \n",
+       "...       ...                ...                                         ...   \n",
+       "222279    WTI         2016-07-01          THE INTERIOR BOARD OF LAND APPEALS   \n",
+       "222280    WTI         2016-07-01                                        BSAE   \n",
+       "222281    WTI         2016-07-01                                       JWEST   \n",
+       "222282    WTI         2016-07-01                          LADENBURG THALMANN   \n",
+       "222283    WTI         2016-07-01                                    MAHOGANY   \n",
        "\n",
-       "[221473 rows x 4 columns]"
+       "        count  \n",
+       "0          11  \n",
+       "1          10  \n",
+       "2           7  \n",
+       "3           5  \n",
+       "4           5  \n",
+       "...       ...  \n",
+       "222279      1  \n",
+       "222280      1  \n",
+       "222281      1  \n",
+       "222282      1  \n",
+       "222283      1  \n",
+       "\n",
+       "[222284 rows x 4 columns]"
       ]
      },
      "execution_count": 9,
@@ -1940,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1957,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
