--- a/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
+++ b/Output/All Data EDA/NLP EDA - NER on Company Names/Company Mentions Average.tex
@@ -4,3 +4,4 @@
 \renewcommand{\avgCompanyMentions}{98.66}
 \renewcommand{\avgCompanyMentions}{98.66}
 \renewcommand{\avgCompanyMentions}{98.63}
+\renewcommand{\avgCompanyMentions}{98.63}
